GRADLE-1129 - Use correct name for eclipse wtp settings file

--- a/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/EclipseIntegrationTest/canCreateAndDeleteMetaData/webservice/build.gradle
+++ b/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/EclipseIntegrationTest/canCreateAndDeleteMetaData/webservice/build.gradle
@@ -14,7 +14,7 @@ dependencies {
 eclipseWtp {
     doLast {
         compareXmlWithIgnoringOrder(file("$rootDir/../expectedFiles/webserviceWtpComponent.xml").text,
-                file(".settings/org.eclipse.wst.common.component.xml").text)
+                file(".settings/org.eclipse.wst.common.component").text)
         compareXmlWithIgnoringOrder(file("$rootDir/../expectedFiles/webserviceWtpFacet.xml").text,
                 file(".settings/org.eclipse.wst.common.project.facet.core.xml").text)
     }
