--- a/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/EclipseIntegrationTest/canCreateAndDeleteMetaData/master/settings.gradle
+++ b/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/EclipseIntegrationTest/canCreateAndDeleteMetaData/master/settings.gradle
@@ -1,1 +1,1 @@
-includeFlat "api", "webservice", "groovyproject", "javabaseproject"
+includeFlat "api", "webservice", "groovyproject", "javabaseproject", "webAppWithVars"
