GRADLE-1045 - Extracted IdePlugin out of EclipsePlugin and IdeaPlugin - Changed the ide plugins to not apply the base plugin - Change 'cleanEclipseWtp' to delete only the wtp settings files, not the whole .settings directory - Updated ide plugin chapters - Changed type of EclipseClasspath and EclipseWtp sourceSets property to Iterable<SourceSet> instead of NamedDomainObjectContainer.

--- a/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/EclipseIntegrationTest/canCreateAndDeleteMetaData/master/build.gradle
+++ b/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/EclipseIntegrationTest/canCreateAndDeleteMetaData/master/build.gradle
@@ -65,8 +65,9 @@ allprojects {
                 }
             }
             cleanEclipse.doLast {
-                assert !file(".classpath").isFile()
-                assert !file(".project").isFile()
+                assert !file(".classpath").exists()
+                assert !file(".project").exists()
+                assert !file('.settings').exists() || file('.settings').listFiles().length == 0
             }
         }
     }
