GRADLE-1133/GRADLE-1130 - some eclipse wtp configuration changes: - include context-root property in wtp component file. - set the version of the 'jst.java' facet based on the project's sourceCompatibility.

--- a/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/EclipseIntegrationTest/canCreateAndDeleteMetaData/master/build.gradle
+++ b/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/EclipseIntegrationTest/canCreateAndDeleteMetaData/master/build.gradle
@@ -2,6 +2,7 @@ import org.custommonkey.xmlunit.Diff
 import org.custommonkey.xmlunit.ElementNameAndAttributeQualifier
 import org.custommonkey.xmlunit.XMLAssert
 import junit.framework.AssertionFailedError
+import org.junit.ComparisonFailure
 
 buildscript {
     repositories {
@@ -87,7 +88,7 @@ void compareXmlWithIgnoringOrder(String expectedXml, String actualXml) {
     try {
         XMLAssert.assertXMLEqual(diff, true)
     } catch (AssertionFailedError error) {
-        throw new AssertionFailedError("Unexpected content for generated file: ${error.message}\nExpected:\n${expectedXml}\nActual:\n${actualXml}").initCause(error)
+        throw new ComparisonFailure("Unexpected content for generated file: ${error.message}", expectedXml, actualXml).initCause(error)
     }
 }
 
