Added a first cut of a tooling API.

--- a/settings.gradle
+++ b/settings.gradle
@@ -28,6 +28,7 @@ include 'codeQuality'
 include 'antlr'
 include 'ui'
 include 'openApi'
+include 'toolingApi'
 include 'docs'
 
 rootProject.name = 'gradle'
