GRADLE-1299 - Tooling API changes: - Added some integration and unit test coverage. - Tooling API loads implementation from classpath via a meta-inf service. - Reworked GradleConnector API.

--- a/subprojects/core/core.gradle
+++ b/subprojects/core/core.gradle
@@ -68,7 +68,7 @@ dependencies {
 
     compile libraries.ant_launcher
 
-    integTestCompile libraries.jetty_depends, project(':wrapper')
+    integTestCompile libraries.jetty_depends, project(':wrapper'), project(':toolingApi')
 
     testFixtures sourceSets.test.classes, sourceSets.main.classes
     integTestFixtures sourceSets.integTest.classes
