Another attempt to fix broken int test on windows ci machine

--- a/subprojects/core/src/integTest/resources/org/gradle/integtests/CommandLineIntegrationTest/shared/build.gradle
+++ b/subprojects/core/src/integTest/resources/org/gradle/integtests/CommandLineIntegrationTest/shared/build.gradle
@@ -12,5 +12,5 @@ task checkSystemPropertyGradleUserHomeHasPrecedence << {
 }
 
 task checkJavaHome << {
-    assert System.properties['java.home'] == expectedJavaHome
+    assert Jvm.current().javaHome == file(expectedJavaHome)
 }
