--- a/subprojects/tooling-api/tooling-api.gradle
+++ b/subprojects/tooling-api/tooling-api.gradle
@@ -3,7 +3,7 @@ apply plugin: 'groovy'
 dependencies {
     groovy libraries.groovy_depends
 
-    compile project(':core')
+    compile project(':core'), project(':wrapper')
 
     testCompile project(path: ':core', configuration: 'testFixtures')
     testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
