GRADLE-1248 - Added Project.container() to allow a plugin to create NamedDomainObjectContainer instances for managing its domain objects. - Added some more content to the 'custom tasks' and 'custom plugins' chapters.

--- a/subprojects/docs/src/samples/customPlugin/build.gradle
+++ b/subprojects/docs/src/samples/customPlugin/build.gradle
@@ -3,13 +3,27 @@ apply plugin: 'groovy'
 
 dependencies {
     compile gradleApi()
-// END SNIPPET use-plugin
-    groovy localGroovy()
-    testCompile 'junit:junit:4.7'
-// START SNIPPET use-plugin
 }
 // END SNIPPET use-plugin
 
+apply plugin: 'maven'
+
 repositories {
     mavenCentral()
+}
+
+dependencies {
+    groovy localGroovy()
+    testCompile 'junit:junit:4.7'
+}
+
+group = 'org.gradle'
+version = '1.0-SNAPSHOT'
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: uri('repo'))
+        }
+    }
 }
