--- a/build.gradle
+++ b/build.gradle
@@ -136,25 +136,39 @@ configure(publishedProjects()) {
         from { sourceSets.main.java.srcDirs + sourceSets.main.groovy.srcDirs }
     }
 
+    task generatePom {
+        pomFile = new File(temporaryDir, 'pom.xml')
+        doLast {
+            def localDeployer = install.repositories.mavenInstaller
+
+            configure(localDeployer) {
+                pom.scopeMappings.mappings.clear()
+                pom.scopeMappings.addMapping(300, configurations.publishRuntime, Conf2ScopeMappingContainer.RUNTIME)
+                pom.groupId = group
+                pom.artifactId = archivesBaseName
+                pom.version = version
+                pom.writeTo(pomFile)
+            }
+
+        }
+    }
     artifacts {
         publishRuntime jar
         publishRuntime sourceJar
+        publishRuntime new org.gradle.api.internal.artifacts.publish.DefaultPublishArtifact(archivesBaseName, 'pom', 'pom', null, new Date(), generatePom.pomFile, generatePom)
     }
 
-    def remoteDeployer = null
     uploadArchives {
         configuration = configurations.publishRuntime
-        repositories {
-            remoteDeployer = mavenDeployer {
-                repository(url: uri("$rootProject.buildDir/repo"))
+        dependsOn generatePom
+        uploadDescriptor = false
+        doFirst {
+            org.apache.ivy.util.url.CredentialsStore.INSTANCE.addCredentials('Artifactory Realm', 'gradle.artifactoryonline.com', artifactoryUserName, artifactoryUserPassword)
+            it.repositories.add(new org.apache.ivy.plugins.resolver.URLResolver()) {
+                name = 'gradleReleases'
+                addArtifactPattern("${version.libsUrl}/${project.group.replaceAll('\\.', '/')}/${archivesBaseName}/[revision]/[artifact]-[revision](-[classifier]).[ext]" as String)
             }
         }
-    }
-    def localDeployer = install.repositories.mavenInstaller
-
-    configure([remoteDeployer, localDeployer]) {
-        pom.scopeMappings.mappings.clear()
-        pom.scopeMappings.addMapping(300, configurations.publishRuntime, Conf2ScopeMappingContainer.RUNTIME)
     }
 }
 
