Added an id for the custom plugin in 'customBuildLanguage' sample

--- a/subprojects/docs/src/samples/customBuildLanguage/basicEdition/build.gradle
+++ b/subprojects/docs/src/samples/customBuildLanguage/basicEdition/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: org.gradle.samples.ProductPlugin
+apply plugin: 'product'
 
 // A custom build element. This defines the product to build
 product {
