--- a/website/build.gradle
+++ b/website/build.gradle
@@ -50,7 +50,7 @@ webSrcDir = file('src')
 if (!hasProperty('gradleCorePath')) {
     gradleCorePath = projectDir.parentFile
 }
-File generatedDocs = new File("$gradleCorePath/subprojects/gradle-docs/build/websiteDocs")
+File generatedDocs = new File("$gradleCorePath/subprojects/docs/build/websiteDocs")
 
 //buildWebsiteDir = new File(System.getProperty('user.home'), 'Sites/gradle')
 buildWebsiteDir = new File(buildDir, 'website')
@@ -74,6 +74,7 @@ task configureReleases << {
 
     version = gradleCoreProperties.version
     releases << new Release(version: version, status: 'Current Release')
+    releases << new Release(version: '0.9.1')
     releases << new Release(version: '0.9')
     releases << new Release(version: '0.8')
 }
