GRADLE-1326 - Added integration test for application plugin - Added application plugin properties to the dsl documentation - Fixed JavaExec so that dependencies for the classpath are autowired - Changed toolingApi sample to use application plugin

--- a/subprojects/docs/src/samples/application/build.gradle
+++ b/subprojects/docs/src/samples/application/build.gradle
@@ -4,5 +4,5 @@ apply plugin:'application'
 // END SNIPPET use-plugin
 
 // START SNIPPET mainClassName-conf
-mainClassName = "org.acme.Main"
+mainClassName = "org.gradle.sample.Main"
 // END SNIPPET mainClassName-conf
