--- a/subprojects/docs/src/samples/toolingApi/build.gradle
+++ b/subprojects/docs/src/samples/toolingApi/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'application'
 
 if (!hasProperty('toolingApiVersion')) {
     toolingApiVersion = gradle.gradleVersion
@@ -16,10 +17,9 @@ dependencies {
     compile "org.gradle:gradle-tooling-api:${toolingApiVersion}"
 }
 
-task run(type: JavaExec) {
-    dependsOn sourceSets.main.runtimeClasspath.buildDependencies
-    main = 'org.gradle.sample.Main'
-    classpath = sourceSets.main.runtimeClasspath
+mainClassName = 'org.gradle.sample.Main'
+
+run {
     if (project.hasProperty('gradleDistribution')) {
         args = [gradleDistribution]
     }
